@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Wed Sep 27 01:30:57 CEST 2006
+// Tue Oct 03 00:35:28 CEST 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -40,7 +40,7 @@ namespace Mono.Cecil {
 	using Hcp = Mono.Cecil.HashCodeProvider;
 	using Cmp = System.Collections.Comparer;
 
-	public sealed class TypeReferenceCollection : NameObjectCollectionBase, IReflectionVisitable  {
+	public sealed class TypeReferenceCollection : NameObjectCollectionBase, IList, IReflectionVisitable  {
 
 		ModuleDefinition m_container;
 
@@ -64,6 +64,22 @@ namespace Mono.Cecil {
 
 		public object SyncRoot {
 			get { return this; }
+		}
+
+		bool IList.IsReadOnly {
+			get { return false; }
+		}
+
+		bool IList.IsFixedSize {
+			get { return false; }
+		}
+
+		object IList.this [int index] {
+			get { return BaseGet (index); }
+			set {
+				Check (value);
+				BaseSet (index, value);
+			}
 		}
 
 		public TypeReferenceCollection (ModuleDefinition container) :
@@ -146,6 +162,41 @@ namespace Mono.Cecil {
 			return values;
 		}
 #endif
+
+		void Check (object value)
+		{
+			if (!(value is TypeReference))
+				throw new ArgumentException ();
+		}
+
+		int IList.Add (object value)
+		{
+			Check (value);
+			Add (value as TypeReference);
+			return 0;
+		}
+
+		bool IList.Contains (object value)
+		{
+			Check (value);
+			return Contains (value as TypeReference);
+		}
+
+		int IList.IndexOf (object value)
+		{
+			throw new NotSupportedException ();
+		}
+
+		void IList.Insert (int index, object value)
+		{
+			throw new NotSupportedException ();
+		}
+
+		void IList.Remove (object value)
+		{
+			Check (value);
+			Remove (value as TypeReference);
+		}
 
 		void Detach (TypeReference type)
 		{
